k3s/apps/audiobookshelf/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  ports:
    - name: http
      port: 80
      targetPort: 13378
  selector:
    app: audiobookshelf
